--- a/templates/start_mock.html
+++ b/templates/start_mock.html
@@ -157,8 +157,8 @@
 
                 <div class="col-md-6">
                     <h3>Twitter</h3>
-                    <a class="twitter-timeline" width="100%" href="https://twitter.com/search?q=%23landmatrix"
-                       data-widget-id="344020652090597377">Tweets about "#landmatrix"</a>
+                    <a class="twitter-timeline" width="100%" href="https://twitter.com/search?q=%40landmatrix"
+                       data-widget-id="344020652090597377">Tweets about "@landmatrix"</a>
                     <script>!function (d, s, id) {
                         var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
                         if (!d.getElementById(id)) {
