--- a/templates/base.html
+++ b/templates/base.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col-md-2 center">
                     <h4>{% trans "Share and adapt" %}</h4>
-                    <a target="_blank" href="http://creativecommons.org/licenses/by-nc-sa/3.0/"><span
+                    <a target="_blank" href="http://creativecommons.org/licenses/by/4.0/"><span
                             class="lm-footer lm-creative-commons"></span></a>
                     <a target="_blank" href="https://github.com/sinnwerkstatt/landmatrix"><i class="lm-footer lm-github"></i></a>
                 </div>
