Layerswitcher now has self-built collapses
Former-commit-id: 2781250a675de977a8da626835a623e97c72de52

--- a/landmatrix/static/css/map.css
+++ b/landmatrix/static/css/map.css
@@ -132,6 +132,10 @@ table .map {
     width: 1.2em;
 }
 
+div.layer-group > a:hover {
+    text-decoration: none;
+}
+
 .layer-switcher .panel,
 #legend .panel {
     background-color: #fcfcfc;
