Better deal-data handling in map
Former-commit-id: c97a11c425f962760091340046aa326cd0f03348

--- a/landmatrix/static/css/map.css
+++ b/landmatrix/static/css/map.css
@@ -125,8 +125,8 @@ table .map {
 
 .legend-symbol {
     float: left;
-/*    height: 1.2em; */
-    margin-left: 3.3em;
+    height: 1.2em;
+    margin-left: 5px;
     margin-right: 0.3em;
     text-align: center;
     width: 1.2em;
