--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -5,9 +5,11 @@
 
 {% block head %}
     <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/ol3-layerswitcher.css" %}"/>
 
+    <link rel="stylesheet" href="{% static "css/nprogress.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/ol3-layerswitcher.css" %}"/>
     <link rel="stylesheet" href="{% static "css/map.css" %}"/>
+
 {% endblock %}
 
 {% block page_title %}{% trans "Map" %}{% endblock %}
@@ -52,6 +54,7 @@
 {% block js %}
 <script type="text/javascript" src="{% static "vendor/openlayers/ol-debug.js" %}"></script>
 <script type="text/javascript" src="{% static "js/ol3-layerswitcher.js" %}"></script>
+<script type="text/javascript" src="{% static "vendor/nprogress/nprogress.js" %}"></script>
 
 <script type="text/javascript" src="{% static "js/map.js" %}"></script>
 <script type="text/javascript" src="{% static "js/layers.js" %}"></script>
