--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -3,36 +3,40 @@
 {% load humanize %}
 
 {% block head %}
+    <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
+    <link rel="stylesheet" href="{% static "css/map.css" %}"/>
+
     {# map #}
-  <script src="{% static "media/js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
-  <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script>
-  <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
-  <!--script src="/media/js/editor/livesearch.js" type="text/javascript" charset="utf-8"></script-->
-  <!--script src="/media/js/editor/add_change.js" type="text/javascript" charset="utf-8"></script-->
+    <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+
+    <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+    <!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script>-->
+    <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
+    <!--script src="/media/js/editor/livesearch.js" type="text/javascript" charset="utf-8"></script-->
+    <!--script src="/media/js/editor/add_change.js" type="text/javascript" charset="utf-8"></script-->
 {% endblock %}
 
-{% block page_title %}{% trans "Change deal" %} #{{ deal_id }}{% endblock %}
-{% block title %}{% trans "Change deal" %} #{{ deal_id }}{% endblock %}
 
-{% block breadcrumb %}
-<ul class="breadcrumb">
-  <li><a href="/editor">{% trans "Editor" %}</a></li>
-  <li><a href="/global/change/{{ deal_id }}">{% trans "Change deal" %} #{{ deal_id }}</a></li>
-  <li>{% trans "Change deal" %}  #{{ deal_id }}</li>
-</ul>
+{% block page_title %}{% trans "Change Deal" %} #{{ deal_id }}{% endblock %}
+{% block title %}{% trans "Change Deal" %} #{{ deal_id }}{% endblock %}
+
+{% block breadcrumb_inner %}
+    <li><a href="/manage/">Manage</a></li>
+    <li>{% trans "Deal" %} #{{ deal_id }}</li>
 {% endblock %}
 
 {% block content %}
-  <form action="." method="post" enctype="multipart/form-data">
+    <form action="." method="post" enctype="multipart/form-data">
 
-    {% csrf_token %}
+        {% csrf_token %}
 
-    <div class="panel-group" id="accordion">
-        {% include "includes/dealpanels.html" %}
-    </div>
+        <div class="panel-group" id="accordion">
+            {% include "includes/dealpanels.html" %}
+        </div>
 
-    <input type="submit" value="{% trans 'Submit' %}" />
+        <input type="submit" value="{% trans 'Submit' %}"/>
 
-  </form>
+    </form>
 
 {% endblock %}
