--- a/templates/wagtailcms/home_page.html
+++ b/templates/wagtailcms/home_page.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% load wagtailcore_tags %}
+{% load wagtailuserbar %}
+
+{% block body_class %}template-homepage{% endblock %}
+
+{% block extra_messages %}
+    {% wagtailuserbar %}
+{% endblock %}
+
+{% block title %}
+    {{ page.title }}
+{% endblock %}
+
+{% block content %}
+    {{ page.body }}
+{% endblock %}
+
