Google js for geocoding in editor

--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -16,6 +16,9 @@
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
 
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
+
     <script>unlockMaps()</script>
 
 
