--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -12,9 +12,14 @@
 
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
     <!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script>-->
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
+
     <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
     <!--script src="/media/js/editor/livesearch.js" type="text/javascript" charset="utf-8"></script-->
     <!--script src="/media/js/editor/add_change.js" type="text/javascript" charset="utf-8"></script-->
+    <script>unlockMaps()</script>
+
 {% endblock %}
 
 
