Added page title to wagtail templates

--- a/wagtailcms/templates/wagtail_page.html
+++ b/wagtailcms/templates/wagtail_page.html
@@ -9,9 +9,8 @@
     {% wagtailuserbar %}
 {% endblock %}
 
-{% block title %}
-    {{ page.title }}
-{% endblock %}
+{% block title %}{{ page.title }}{% endblock %}
+{% block page_title %}{{ page.title }}{% endblock %}
 
 {% block content %}
     {{ page.body|richtext }}
