--- a/wagtailcms/templates/wagtail_root_page.html
+++ b/wagtailcms/templates/wagtail_root_page.html
@@ -9,6 +9,5 @@
     {% wagtailuserbar %}
 {% endblock %}
 
-{% block title %}
-    {{ page.title }}
-{% endblock %}
+{% block title %}{{ page.title }}{% endblock %}
+{% block page_title %}{{ page.title }}{% endblock %}
